RMB Drag not working properly on Nodes #31169

Closed
opened 2012-04-29 03:54:51 +02:00 by Daniel Salazar · 13 comments
Member

%%%RMB Drag on a node should not "accept on release" on default settings%%%

%%%RMB Drag on a node should not "accept on release" on default settings%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I don't know whether about what frequent users of this stuff think, but IMO the current behaviour is actually way more intuitive. Before, dragging nodes around acted quite strange, and made clicking around in the node editor feel quite clumsy/overloaded. %%%

%%%I don't know whether about what frequent users of this stuff think, but IMO the current behaviour is actually way more intuitive. Before, dragging nodes around acted quite strange, and made clicking around in the node editor feel quite clumsy/overloaded. %%%
Author
Member

%%%If an user likes this behavior he should activate the "Release Confirm" option which does precisely this. This behavior was introduced recently and is counter intuitive for us who like this option off%%%

%%%If an user likes this behavior he should activate the "Release Confirm" option which does precisely this. This behavior was introduced recently and is counter intuitive for us who like this option off%%%
Author
Member

%%%Oh also forgot to say you can always get instant drop effect by using a LMB drag on the node editor, just the RMB drag I expect it to be the same for all trnsforms in blender according to the preference!

cheers%%%

%%%Oh also forgot to say you can always get instant drop effect by using a LMB drag on the node editor, just the RMB drag I expect it to be the same for all trnsforms in blender according to the preference! cheers%%%

%%%IMO, this behavior must be an option in Preferences if it's possible. Currently I really like "accept on release" because too much clicking was really annoying. But people are different.%%%

%%%IMO, this behavior must be an option in Preferences if it's possible. Currently I really like "accept on release" because too much clicking was really annoying. But people are different.%%%
Author
Member

%%%As I said it is already a preference. This is just ignoring the preference I don't know why. LMB drag has been always been accept on release and RMB drag has always respected the user pref

cheers%%%

%%%As I said it is already a preference. This is just ignoring the preference I don't know why. LMB drag has been always been accept on release and RMB drag has always respected the user pref cheers%%%
Member

%%%Wait a moment, so are we talking about the default behaviour for LMB or RMB?

So, let's just clarify:

  • If it's LMB - Accept on Release seems more sensible to me
  • If it's RMB - Whatever the user pref is should be the default (in accordance with the other parts of Blender)

This is all assuming that we're using the default RMB-select too.

So, is the problem in this bug report really about RMB not obeying the userpref when using RMB select?%%%

%%%Wait a moment, so are we talking about the default behaviour for LMB or RMB? So, let's just clarify: * If it's LMB - Accept on Release seems more sensible to me * If it's RMB - Whatever the user pref is should be the default (in accordance with the other parts of Blender) This is all assuming that we're using the default RMB-select too. So, is the problem in this bug report really about RMB not obeying the userpref when using RMB select?%%%
Author
Member

%%%aww fack... yeah I fail big time, corrected in the first post%%%

%%%aww fack... yeah I fail big time, corrected in the first post%%%

%%%Lukas, can you please look into this?%%%

%%%Lukas, can you please look into this?%%%
Member

%%%Ok, i can see why this would be the preferred behavior, can change this easily.

@daniel-34: you write "This behavior was introduced recently", but according to svn log the fixed release-confirm for node transform tweak was introduced in 27966/27996 respectively, i.e. April 2/5 2010 ... is there any change to this i missed?%%%

%%%Ok, i can see why this would be the preferred behavior, can change this easily. @daniel-34: you write "This behavior was introduced recently", but according to svn log the fixed release-confirm for node transform tweak was introduced in 27966/27996 respectively, i.e. April 2/5 2010 ... is there any change to this i missed?%%%
Member

%%%Oh, and btw this key binding uses the usual ACTION/SELECT events, so it's not bound to explicit left/right mouse button. When using left-button-select, the behavior is also flipped, i.e. LMB uses user setting, RMB always release-confirms.%%%

%%%Oh, and btw this key binding uses the usual ACTION/SELECT events, so it's not bound to explicit left/right mouse button. When using left-button-select, the behavior is also flipped, i.e. LMB uses user setting, RMB always release-confirms.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31169
No description provided.